TargetURLRedirectStrategy no longer throws an exception when redirects are disabled for a request (github #124).